--- a/donate.css
+++ b/donate.css
@@ -102,6 +102,25 @@ a {
       );
   /*     background-size: 6px 6px; */
   }
+.text a
+{
+  display: inline-block;
+  font-size: 2em;
+  background: plum;
+  padding: 10px 30px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 700;
+  margin-top: 5px;
+  color: #111;
+  letter-spacing: 1px;
+  transition: 0.2s;
+}
+
+.text a:hover
+{
+  letter-spacing: 5px;
+}
 .header {
     background-color: #fff;
     box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
@@ -152,7 +171,7 @@ a {
   .header .menu-icon {
     cursor: pointer;
     display: inline-block;
-    float: right;
+    /**float: right;**/
     padding: 28px 20px;
     position: relative;
     user-select: none;
